Closes #264 Navigation bar allowed to wrap around by removing its fixed 1000px width from CSS
git-svn-id: https://redmine.hindsight.psc.edu/svn/hermes/trunk@1813 c0c85e88-7b48-49d6-ad45-a8906df79eec

--- a/HERMES2/src/ui_www/hermes_custom.css
+++ b/HERMES2/src/ui_www/hermes_custom.css
@@ -765,7 +765,8 @@ ul.art-hmenu
 .art-nav-inner{
    text-align: left;
    margin:0 auto;
-   width: 1000px;
+   /*width: 1000px;
+   commented out to allow navigation bar to wrap*/
 }
 
 .desktop-nav .art-nav-inner{
